syntax = "proto3";
package coolcar;
option go_package = "coolcar/proto/gen/go;trippb";

message Location {
  double latitude = 1;
  double longitude = 2;
}

//枚举类型
enum TripStatus {
  TS_NOT_SPECIFIED = 0;
  NOT_STARTED = 1;
  IN_PROGRESS = 2;
  FINISHED = 3;
  PAID = 4;
}

message Trip {
  string start = 1;  //第一个字段
  Location start_pos = 5;
  repeated Location path_pos = 6;
  string end = 2;  //第二个字段
  int32 duration_sec = 3;  //牵扯到单位,带上单位
  int32 fee_cent = 4;
  TripStatus status = 7;
}

service TripService{
  rpc GetTrip (GetTripReq) returns (GetTripRsp);
}

message GetTripReq{
  string id = 1;
}

message GetTripRsp{
  string id = 1;
  Trip trip = 2;
}